--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     }
   ],
   "require": {
-    "nepttune/base-requirements" : "^4.0",
-    
+    "php": "^7.2",
     "ext-json": ">=1.6"
   },
   "autoload": {
